# RSMS-really-simple-msg-system-3.0-live

./: CMakeLists.txt  README.md  ask-to-type-msg.cpp  ask-to-type-msg.hpp  chat-history-ui.cpp  client.cpp  database.cpp  server.cpp
client/: CMakeLists.txt  ask-to-type-msg.cpp  chat-history-ui.cpp  chat-history-ui.hpp  client.cpp
server/: CMakeLists.txt  server.cpp
shared/: CMakeLists.txt  database.cpp  database.hpp
